[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Bonuses/IceBlock.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Blocks/IceBlock.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Sounds/Main/ice2.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="IceBlock" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="IceSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "small"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="ice2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
max_distance = 1000.0
bus = "Sounds"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 1 )

[connection signal="finished" from="ice2" to="." method="_on_AudioStreamPlayer2D_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
